# mini-test

./: .gitignore  CMakeLists.txt  CMakeSettings.json  hello.cpp
include/: HasMember.hpp  ListNode.h  Test1.hpp  Test2.hpp  Test3.hpp  TestFunc.hpp  TypeList.hpp  cgm_funs.hpp  comm.hpp  const_val.hpp  dbg.hpp  fileop.hpp  gray.hpp  json.hpp  lc1.hpp  make_color.hpp  matrix2.hpp  print_stl.hpp  serialization.hpp  token_stream.hpp  tool.h
src/: ListNode.cpp  NoTrans.cpp  leetcode.cpp  m_pkg_name.cpp  matrix.cpp  no_trans_am.cpp  t2.cpp  t3.cpp  t4.cpp  t5.cpp  test_comm.cpp  test_matrix.cpp  test_rgb.cpp  test_token_stream.cpp  tool.cpp
src/cq_tools/: NoTrans.cpp  get_pkg_name.cpp  re_set_ime_opt.cpp  rm_pkg.cpp  set_qk_splash.cpp  set_shortEdges.cpp  up_ver.cpp
src/effective_modern_cpp/: chapter_1.hpp  main.cpp
test/: CMakeLists.txt  test.cpp
test_atomic/: CMakeLists.txt  main.cpp  ta.cpp  ta.h
